--- a/views/data.ejs
+++ b/views/data.ejs
@@ -62,6 +62,14 @@
                     <option value="false">No</option>
                 </select>
               </div>
+              <div class="form-group">
+                <label for="Doc">Upload Document</label>
+                <input type="file" class="form-control" name="file1">
+              </div>
+              <div class="form-group">
+                <label for="Doc">Upload Document 2</label>
+                <input type="file" class="form-control" name="file2">
+              </div>
 
             <button type="submit" class="btn btn-dark">Add</button>
             
