--- a/views/secrets.ejs
+++ b/views/secrets.ejs
@@ -2,7 +2,7 @@
 
 <div class="jumbotron text-center">
   <div class="container">
-    <i class="fas fa-key fa-6x"></i>
+    <i class="fas fa-thermometer fa-7x"></i>
     <h1 class="display-3">Welcome To DashBoard</h1>
     <p class="secret-text"></p>
     <hr>
